Fixed z-index for CodeMirror auto-complete.

--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -18,9 +18,9 @@
 .CodeMirror-overlayscroll-vertical { right: 0; top: 0; width: 6px; }
 .CodeMirror-overlayscroll-vertical div { right: 0; width: 100%; }
 .CodeMirror-search-hint { font-family: Arial; font-size: 12px; color: #888; float:right; }
-.CodeMirror-hints { z-index: 30; }
 .CodeMirror-search-label { font-family: Arial; font-size: 12px; float: left; width: 70px; text-align: right; }
 .CodeMirror-search-field { font-size: 12px; width: 100%; margin: 0 0 0 80px; padding: 0; display: block; }
+.CodeMirror-hints { z-index: 100; }
 .cm-variable-T { background-color: rgba(104,178,91,.3); color: black; }
 .cm-variable-L { background-color: rgba(104,178,191,.3); color: black; }
 .cm-variable-A { background-color: rgba(191,61,162,.3); color: black; }
